// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header with logged in user should open dropdown content on click 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <a
          class="logo"
          data-testid="logo"
          href="/"
        >
          YIF
        </a>
        <nav>
          <div
            class="pages"
          >
            <a
              class="underlineAnimation"
              href="/directions"
            >
              Напрями
            </a>
            <a
              class="underlineAnimation"
              href="/universities"
            >
              Університети
            </a>
          </div>
          <div
            class="entry"
          >
            <div
              class="dropdown"
            >
              <div
                class="user border"
              >
                <span
                  class="userName"
                >
                  roman.ark.ko
                </span>
                <img
                  alt="avatar"
                  class="avatar"
                  src="assets/icons/avatar.jpg"
                />
                <span
                  class="arrow"
                >
                  <svg
                    height="10px"
                    viewBox="0 0 123.959 123.959"
                    width="14px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M66.18,29.742c-2.301-2.3-6.101-2.3-8.401,0l-56,56c-3.8,3.801-1.1,10.2,4.2,10.2h112c5.3,0,8-6.399,4.2-10.2L66.18,29.742
 z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <div
                class="dropdownContent"
              >
                <a
                  href="/cabinet"
                >
                  Особистий кабінет
                </a>
                <button>
                  Вийти
                </button>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header>
      <a
        class="logo"
        data-testid="logo"
        href="/"
      >
        YIF
      </a>
      <nav>
        <div
          class="pages"
        >
          <a
            class="underlineAnimation"
            href="/directions"
          >
            Напрями
          </a>
          <a
            class="underlineAnimation"
            href="/universities"
          >
            Університети
          </a>
        </div>
        <div
          class="entry"
        >
          <div
            class="dropdown"
          >
            <div
              class="user border"
            >
              <span
                class="userName"
              >
                roman.ark.ko
              </span>
              <img
                alt="avatar"
                class="avatar"
                src="assets/icons/avatar.jpg"
              />
              <span
                class="arrow"
              >
                <svg
                  height="10px"
                  viewBox="0 0 123.959 123.959"
                  width="14px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M66.18,29.742c-2.301-2.3-6.101-2.3-8.401,0l-56,56c-3.8,3.801-1.1,10.2,4.2,10.2h112c5.3,0,8-6.399,4.2-10.2L66.18,29.742
 z"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <div
              class="dropdownContent"
            >
              <a
                href="/cabinet"
              >
                Особистий кабінет
              </a>
              <button>
                Вийти
              </button>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`header with logged in user should render properly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <a
          class="logo"
          data-testid="logo"
          href="/"
        >
          YIF
        </a>
        <nav>
          <div
            class="pages"
          >
            <a
              class="underlineAnimation"
              href="/directions"
            >
              Напрями
            </a>
            <a
              class="underlineAnimation"
              href="/universities"
            >
              Університети
            </a>
          </div>
          <div
            class="entry"
          >
            <div
              class="dropdown"
            >
              <div
                class="user"
              >
                <span
                  class="userName"
                >
                  roman.ark.ko
                </span>
                <img
                  alt="avatar"
                  class="avatar"
                  src="assets/icons/avatar.jpg"
                />
                <span
                  class="arrow"
                >
                  <svg
                    height="10px"
                    viewBox="0 0 292.362 292.362"
                    width="14px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M286.935,69.377c-3.614-3.617-7.898-5.424-12.848-5.424H18.274c-4.952,0-9.233,1.807-12.85,5.424
 C1.807,72.998,0,77.279,0,82.228c0,4.948,1.807,9.229,5.424,12.847l127.907,127.907c3.621,3.617,7.902,5.428,12.85,5.428
 s9.233-1.811,12.847-5.428L286.935,95.074c3.613-3.617,5.427-7.898,5.427-12.847C292.362,77.279,290.548,72.998,286.935,69.377z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header>
      <a
        class="logo"
        data-testid="logo"
        href="/"
      >
        YIF
      </a>
      <nav>
        <div
          class="pages"
        >
          <a
            class="underlineAnimation"
            href="/directions"
          >
            Напрями
          </a>
          <a
            class="underlineAnimation"
            href="/universities"
          >
            Університети
          </a>
        </div>
        <div
          class="entry"
        >
          <div
            class="dropdown"
          >
            <div
              class="user"
            >
              <span
                class="userName"
              >
                roman.ark.ko
              </span>
              <img
                alt="avatar"
                class="avatar"
                src="assets/icons/avatar.jpg"
              />
              <span
                class="arrow"
              >
                <svg
                  height="10px"
                  viewBox="0 0 292.362 292.362"
                  width="14px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M286.935,69.377c-3.614-3.617-7.898-5.424-12.848-5.424H18.274c-4.952,0-9.233,1.807-12.85,5.424
 C1.807,72.998,0,77.279,0,82.228c0,4.948,1.807,9.229,5.424,12.847l127.907,127.907c3.621,3.617,7.902,5.428,12.85,5.428
 s9.233-1.811,12.847-5.428L286.935,95.074c3.613-3.617,5.427-7.898,5.427-12.847C292.362,77.279,290.548,72.998,286.935,69.377z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`header with no user should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <a
          class="logo"
          data-testid="logo"
          href="/"
        >
          YIF
        </a>
        <nav>
          <div
            class="pages"
          >
            <a
              class="underlineAnimation"
              href="/directions"
            >
              Напрями
            </a>
            <a
              class="underlineAnimation"
              href="/universities"
            >
              Університети
            </a>
          </div>
          <div
            class="entry"
          >
            <a
              class="animatedButtonTransparent"
              href="/login"
            >
              Вхід
            </a>
            <a
              class="animatedButton"
              href="/register"
            >
              Реєстрація
            </a>
          </div>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header>
      <a
        class="logo"
        data-testid="logo"
        href="/"
      >
        YIF
      </a>
      <nav>
        <div
          class="pages"
        >
          <a
            class="underlineAnimation"
            href="/directions"
          >
            Напрями
          </a>
          <a
            class="underlineAnimation"
            href="/universities"
          >
            Університети
          </a>
        </div>
        <div
          class="entry"
        >
          <a
            class="animatedButtonTransparent"
            href="/login"
          >
            Вхід
          </a>
          <a
            class="animatedButton"
            href="/register"
          >
            Реєстрація
          </a>
        </div>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
